--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "bmi": "ts-node bmiCalculator.ts",
     "exercise": "ts-node exerciseCalculator.ts",
     "start": "ts-node index.ts",
-    "dev": "ts-node-dev index.ts"
+    "dev": "ts-node-dev index.ts",
+    "lint": "eslint --ext .ts ."
   },
   "repository": {
     "type": "git",
@@ -24,6 +25,10 @@
   "devDependencies": {
     "@types/express": "^4.17.7",
     "@types/node": "^14.6.0",
+    "@typescript-eslint/eslint-plugin": "^3.9.1",
+    "@typescript-eslint/parser": "^3.9.1",
+    "eslint": "^7.7.0",
+    "eslint-plugin-react": "^7.20.6",
     "ts-node": "^8.10.2",
     "ts-node-dev": "^1.0.0-pre.58",
     "typescript": "^3.9.7"
